[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish - A Simple and Universal Swarm Intelligence Engine for Predicting Everything"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Core framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # LLM related
    "openai>=1.0.0",

    # Zep Cloud
    "zep-cloud==3.13.0",

    # OASIS social media simulation
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",

    # File processing
    "PyMuPDF>=1.24.0",
    # Encoding detection (supports non-UTF-8 text files)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",

    # PyTorch CPU-only (used by OASIS simulation)
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv]
override-dependencies = [
    "nvidia-cublas-cu12>=99",
    "nvidia-cuda-cupti-cu12>=99",
    "nvidia-cuda-nvrtc-cu12>=99",
    "nvidia-cuda-runtime-cu12>=99",
    "nvidia-cudnn-cu12>=99",
    "nvidia-cufft-cu12>=99",
    "nvidia-cufile-cu12>=99",
    "nvidia-curand-cu12>=99",
    "nvidia-cusolver-cu12>=99",
    "nvidia-cusparse-cu12>=99",
    "nvidia-cusparselt-cu12>=99",
    "nvidia-nccl-cu12>=99",
    "nvidia-nvjitlink-cu12>=99",
    "nvidia-nvshmem-cu12>=99",
    "cuda-bindings>=99",
    "triton>=99",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
